force-app/main/default/objects/Dealer_Ally__c/fields/Panel_Type__c.field-meta.xml
<CustomField>
    <fullName>Panel_Type__c</fullName>
    <label>Panel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2GIG</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Building36</fullName>
            </value>
            <value>
                <fullName>CatM1</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Concord</fullName>
            </value>
            <value>
                <fullName>ElkGuard</fullName>
            </value>
            <value>
                <fullName>Go Control 3</fullName>
            </value>
            <value>
                <fullName>Go Control 4</fullName>
            </value>
            <value>
                <fullName>Greybox</fullName>
            </value>
            <value>
                <fullName>HxGW</fullName>
            </value>
            <value>
                <fullName>Impassa</fullName>
            </value>
            <value>
                <fullName>iotega</fullName>
            </value>
            <value>
                <fullName>IQ Panel 2</fullName>
            </value>
            <value>
                <fullName>IQ Panel 3</fullName>
            </value>
            <value>
                <fullName>IQPanel</fullName>
            </value>
            <value>
                <fullName>Neo</fullName>
            </value>
            <value>
                <fullName>No Security Panel (e.g. Video)</fullName>
            </value>
            <value>
                <fullName>NotSet</fullName>
            </value>
            <value>
                <fullName>Nucleus</fullName>
            </value>
            <value>
                <fullName>NX</fullName>
            </value>
            <value>
                <fullName>OneLink</fullName>
            </value>
            <value>
                <fullName>Panel16</fullName>
            </value>
            <value>
                <fullName>PointHub</fullName>
            </value>
            <value>
                <fullName>PowerSeries Neo/Pro</fullName>
            </value>
            <value>
                <fullName>SEMPowerSeries</fullName>
            </value>
            <value>
                <fullName>SEMVista</fullName>
            </value>
            <value>
                <fullName>Simon</fullName>
            </value>
            <value>
                <fullName>Touchlink</fullName>
            </value>
            <value>
                <fullName>Vario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>