force-app/main/default/objects/Dealer_Ally__c/fields/Pets_over_45_LBS__c.field-meta.xml
<CustomField>
    <fullName>Pets_over_45_LBS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pets over 45 LBS</label>
    <type>Checkbox</type>
</CustomField>