force-app/main/default/objects/Dealer_Ally__c/fields/Routing_Number_System__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number_System__c</fullName>
    <label>Routing Number System</label>
    <length>30</length>
    <type>Text</type>
</CustomField>