force-app/main/default/objects/Dealer_Ally__c/fields/Rule_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Rule_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rule/Schedule</label>
    <type>Checkbox</type>
</CustomField>