force-app/main/default/objects/Dealer_Ally__c/fields/Sales_Rep_Not_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Not_User__c</fullName>
    <label>Sales Rep - Not User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>