force-app/main/default/objects/Dealer_Ally__c/fields/Service_Package__c.field-meta.xml
<CustomField>
    <fullName>Service_Package__c</fullName>
    <label>Service Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wireless Signal Forwarding</fullName>
            </value>
            <value>
                <fullName>Pro Video</fullName>
            </value>
            <value>
                <fullName>Interactive Gold</fullName>
            </value>
            <value>
                <fullName>Interactive + Automation</fullName>
            </value>
            <value>
                <fullName>Interactive</fullName>
            </value>
            <value>
                <fullName>Home Access</fullName>
            </value>
            <value>
                <fullName>Commercial Plus</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Basic Interactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>