force-app/main/default/objects/Dealer_Ally__c/fields/Sub_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Dealer_Name__c</fullName>
    <label>Sub-Dealer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>