force-app/main/default/objects/Dealer_Ally__c/fields/Total_Cash_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Price__c</fullName>
    <formula>Total_Cash_Selling_Price__c  +  Sales_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cash Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>