force-app/main/default/objects/Dealer_Ally__c/fields/Total_Cash_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Selling_Price__c</fullName>
    <label>Total Cash Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>