force-app/main/default/objects/Dealer_Ally__c/fields/Total_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Down_Payment__c</fullName>
    <formula>Down_Payment__c  +  Trade_in_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>