force-app/main/default/objects/Dealer_Ally__c/fields/Total_Monthly_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Investment__c</fullName>
    <label>Total Monthly Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>