force-app/main/default/objects/Dealer_Ally__c/fields/X49_99_99_99_RMR_Verified__c.field-meta.xml
<CustomField>
    <fullName>X49_99_99_99_RMR_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$49.99-$99.99 RMR Verified</label>
    <type>Checkbox</type>
</CustomField>