force-app/main/default/objects/Dealer_Ally__c/fields/X99_Activation_Fee_Verified__c.field-meta.xml
<CustomField>
    <fullName>X99_Activation_Fee_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$99 Activation Fee Verified</label>
    <type>Checkbox</type>
</CustomField>