force-app/main/default/objects/Dealer_Ally__c/fields/Zip_AddressInformation__c.field-meta.xml
<CustomField>
    <fullName>Zip_AddressInformation__c</fullName>
    <label>Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>